# sewa

./: .gitignore  .~lock.All_Sent_Records.xlsx#  .~lock.sms_new_mandeep.xlsx#  Address_Validation_Results_address_validation_20250919_150117.xlsx  All_Sent_Records.csv  All_Sent_Records.xlsx  All_Sent_Records_20250916_112528.csv  All_Sent_Records_Cleaned.xlsx  All_Sent_Records_Merged.xlsx  All_Sent_Records_backup_20250916_112710.xlsx  Book.xlsx  Duplicate_Detection_Results_duplicate_detection_20250919_150332.xlsx  Duplicate_Transactions.xlsx  Failed_Transactions.xlsx  PARALLEL_PROCESSING_FEATURES.md  PHONE_VALIDATION_FEATURES.md  PhoneValidation_phone_validation_20250919_131040.xlsx  PhoneValidation_phone_validation_20250919_131302.xlsx  Phone_Validation_Results_phone_validation_20250919_150104.xlsx  README.md  Sms.xlsx  TestExport_test_20250919_142534.xlsx  app.py  main.py  pyproject.toml  sms_new.xlsx  sms_new_mandeep.xlsx
exports/: README.md
modules/: __init__.py  address_validator.py  data_processor.py  duplicate_detector.py  message_sender.py  phone_validator.py  ui_components.py
uploads/: Book.xlsx  sms_new_mandeep.xlsx
